<?xml version="1.0"?>
<package format="3">
    <name>cgal5_colcon</name>
    <version>5.0.2</version>
    <description>Colcon wrapper for CGAL 5.</description>
    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>See package</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
